--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule ".vim/bundle/neocomplcache"]
 	path = .vim/bundle/neocomplcache
-	url = https://github.com/Shougo/neocomplcache.git
+	url = git://github.com/Shougo/neocomplcache.git
 [submodule ".vim/bundle/vim-operator-user"]
 	path = .vim/bundle/vim-operator-user
 	url = git://github.com/kana/vim-operator-user.git
@@ -39,28 +39,28 @@
 	url = git://github.com/thinca/vim-textobj-between.git
 [submodule ".vim/bundle/vim-ruby"]
 	path = .vim/bundle/vim-ruby
-	url = https://github.com/vim-ruby/vim-ruby.git
+	url = git://github.com/vim-ruby/vim-ruby.git
 [submodule ".vim/bundle/vim-rails"]
 	path = .vim/bundle/vim-rails
-	url = https://github.com/tpope/vim-rails.git
+	url = git://github.com/tpope/vim-rails.git
 [submodule ".vim/bundle/zencoding-vim"]
 	path = .vim/bundle/zencoding-vim
-	url = https://github.com/mattn/zencoding-vim.git
+	url = git://github.com/mattn/zencoding-vim.git
 [submodule ".vim/bundle/taglist.vim"]
 	path = .vim/bundle/taglist.vim
-	url = https://github.com/vim-scripts/taglist.vim
+	url = git://github.com/vim-scripts/taglist.vim
 [submodule ".vim/bundle/vim-matchit"]
 	path = .vim/bundle/vim-matchit
-	url = https://github.com/tsaleh/vim-matchit.git
+	url = git://github.com/tsaleh/vim-matchit.git
 [submodule ".vim/bundle/vim-ragtag"]
 	path = .vim/bundle/vim-ragtag
-	url = https://github.com/Hakuja/vim-ragtag.git
+	url = git://github.com/Hakuja/vim-ragtag.git
 [submodule ".vim/bundle/scss-syntax.vim"]
 	path = .vim/bundle/scss-syntax.vim
-	url = https://github.com/cakebaker/scss-syntax.vim.git
+	url = git://github.com/cakebaker/scss-syntax.vim.git
 [submodule ".vim/bundle/vim-coffee-script"]
 	path = .vim/bundle/vim-coffee-script
-	url = https://github.com/kchmck/vim-coffee-script.git
+	url = git://github.com/kchmck/vim-coffee-script.git
 [submodule ".vim/bundle/nginx.vim"]
 	path = .vim/bundle/nginx.vim
-	url = https://github.com/vim-scripts/nginx.vim.git
+	url = git://github.com/vim-scripts/nginx.vim.git
