--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule ".vim/bundle/nginx.vim"]
 	path = .vim/bundle/nginx.vim
 	url = git://github.com/vim-scripts/nginx.vim.git
+[submodule ".vim/bundle/phpfolding.vim"]
+	path = .vim/bundle/phpfolding.vim
+	url = https://github.com/vim-scripts/phpfolding.vim.git
