--- a/.gitmodules
+++ b/.gitmodules
@@ -66,4 +66,4 @@
 	url = git://github.com/vim-scripts/nginx.vim.git
 [submodule ".vim/bundle/phpfolding.vim"]
 	path = .vim/bundle/phpfolding.vim
-	url = https://github.com/vim-scripts/phpfolding.vim.git
+	url = git://github.com/vim-scripts/phpfolding.vim.git
